# Crypto-Classics

./: .gitignore  AffineCipher.py  CONTRIBUTING.md  CeaserCipher.py  PlayfairCipher.py  README.md  RailFenceCipher.py  RowTranspositionCipher.py  VigenereCipher.py  cli.py  pyproject.toml  test_ciphers.py
.github/workflows/: ci.yml
